BUILD: added card content and fixed ui layout bug

--- a/style.css
+++ b/style.css
@@ -97,22 +97,30 @@
     gap: 20px;
     padding: 20px;
 
+    overflow: hidden;
+
 }
 
 .mc-left{
     grid-row: 1 / 3;
     display: grid;
     grid-template-rows: auto 1fr;
+
+    min-height: 0;
 }
 
 .mc-tr {
     display: grid;
     grid-template-rows: auto 1fr;
+
+    min-height: 0;
 }
 
 .mc-bl {
     display: grid;
     grid-template-rows: auto 1fr;
+
+    min-height: 0;
 }
 
 .mc-bl-cntnt-container {
@@ -125,13 +133,49 @@
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+    min-height: 0;
 }
 
 .mc-card {
     background-color: white;
     border-radius: 10px;
+
+    display: grid;
+    grid-template-columns: 2% 98%;
+    grid-template-rows: 2fr 1fr;
+
+    min-height: 0;
 }
+
+.mc-card-highlighted {
+    background-color: #F2C14E;
+    grid-row: 1/3;
+}
+
+.mc-card-content {
+    padding: 16px 16px 8px 16px;
+    overflow: hidden;
+
+    min-height: 0;
+}
+
+.mc-card-content h4 {
+    margin-bottom: 8px;
+}
+
+.mc-card-icons {
+
+    display: flex;
+    font-size: 1.5rem;
+    justify-content: flex-end;
+    gap: 25px;
+    padding-right: 25px;
+    align-items: center;
+}
+
+
 
 .mc-tr-cntnt-container {
     padding: 20px;
@@ -141,6 +185,9 @@
     gap: 10px;
     grid-template-rows: repeat(3, auto);
     grid-template-columns: 1fr;
+
+    min-height: 0;
+    overflow: auto;
 }
 
 .mc-tr-cntnt-container div:not(:last-child) {
@@ -159,6 +206,8 @@ h3 {
     justify-content: space-evenly;
     padding: 20px;
     gap: 20px;
+
+    min-height: 0;
 }
 
 .mc-bl-profile {
@@ -211,7 +260,7 @@ h3 {
 }
 
 .hdr-user-profile-pfpic {
-    background-image: url(img/avatar.png);
+    background-image: url(img/manager.png);
     background-size: cover;
     width: 50px;
     height: 50px;
